# cleancito

./: .gitignore  Cargo.toml  README
src/: main.rs
