[package]
name = "cleancito"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chardetng = "0.1.17"
encoding_rs = "0.8.33"
lazy_static = "1.4.0"
regex = "1.10.3"

[profile.release]
strip = true  # Automatically strip symbols from the binary.
# opt-level = "z"  # Optimize for size.
lto = true